[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "charset-normalizer==3.4.0",
    "email-validator>=2.2.0",
    "fastapi==0.116.1",
    "numpy==1.26.4",
    "openai==1.107.2",
    "opencv-python-headless==4.10.0.84",
    "openpyxl==3.1.5",
    "pandas==2.3.2",
    "pillow==11.3.0",
    "psycopg2-binary==2.9.10",
    "psycopg[binary]==3.2.10",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pymupdf==1.26.4",
    "pypdfium2==4.30.0",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.20",
    "requests==2.32.3",
    "sqlalchemy==2.0.43",
    "urllib3==2.2.3",
    "uvicorn[standard]==0.35.0",
]
